# nps_lens_app

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build-linux.yml  build-mac.yml  build-windows.yml  ci.yml  codeql.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml  test.yml  type-check.yml  typecheck.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/examples/: NPS Térmico Senda - 01Enero-02Febrero.xlsx  incidents_sample.csv  issues_filtradas_issues_20260304_182842.xlsx  nps_thermal_senda_mx_sample.csv  reviews_sample.csv
design/: tokens.json
docs/: DATA_CONTRACTS.md  DEVELOPMENT.md  MODULES.md  OPERATIONS.md  RELEASE.md  linking-streamlit-parity-audit.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  test-setup.ts  theme.ts
frontend/src/components/: DatasetUploadCard.tsx  Icon.tsx  IssueList.tsx  LinkingWorkspace.tsx  NavigationTabs.tsx  PlotFigure.tsx  PrimaryNav.tsx  RecordTable.tsx  ServiceOriginMaintenance.tsx  SettingsSheet.tsx  SummaryBoard.tsx  UploadForm.tsx  UploadsTable.tsx
frontend/src/utils/: numberFormat.test.ts  numberFormat.ts
frontend/tests/: dashboard.spec.ts
knowledge/: insights__MX__Senda.json
knowledge/packs/: 440051f6cf2b__pack.json  440051f6cf2b__pack.md  fdfe6760256c__pack.json  fdfe6760256c__pack.md
packs/: 78687fc60307__pack.json  78687fc60307__pack.md  fdfe6760256c__pack.json  fdfe6760256c__pack.md
reports/examples/: 440051f6cf2b__pack.json  440051f6cf2b__pack.md  d81edea00843__pack.json  d81edea00843__pack.md  fdfe6760256c__pack.json  fdfe6760256c__pack.md
scripts/: prepare_icons.py  select_port.py  verify_runtime.py
src/nps_lens/: __init__.py  cli.py  config.py  desktop.py  logging.py  settings.py
src/nps_lens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nps_lens/analytics/: __init__.py  causal.py  changepoints.py  drivers.py  helix_operational_metrics.py  hotspot_metrics.py  incident_attribution.py  incident_rationale.py  journey.py  linking_policy.py  nps_helix_link.py  opportunities.py  text_mining.py
src/nps_lens/api/: __init__.py  app.py  schemas.py
src/nps_lens/application/: service.py
src/nps_lens/core/: __init__.py  compute.py  disk_cache.py  knowledge_cache.py  metrics.py  nps_math.py  perf.py  profiling.py  store.py
src/nps_lens/design/: __init__.py  icons.py  style.py  tokens.py
src/nps_lens/domain/: __init__.py  causal_methods.py  helix_links.py  labels.py  models.py
src/nps_lens/ingest/: __init__.py  base.py  features.py  helix_incidents.py  incidents.py  nps_thermal.py  reviews.py
src/nps_lens/llm/: __init__.py  client.py  insight_response.py  knowledge_cache.py  pack.py  schemas.py
src/nps_lens/models/: __init__.py  common.py  evidence.py  incident.py  nps.py  review.py
src/nps_lens/platform/: __init__.py  artifacts.py  batch.py
src/nps_lens/quality/: __init__.py  profiling.py
src/nps_lens/reports/: __init__.py  content_selectors.py  editorial_tokens.py  executive_ppt.py  ppt_template.py  presentation_context.py
src/nps_lens/repositories/: __init__.py  sqlite_repository.py
src/nps_lens/services/: __init__.py  dashboard_service.py  helix_service.py  nps_service.py
src/nps_lens/services/analytics/: __init__.py  insights_service.py  kpis_service.py  nps_service.py
src/nps_lens/testing/: __init__.py  fixtures.py
src/nps_lens/ui/: __init__.py  business.py  charts.py  components.py  historic_changes.py  narratives.py  plotly_theme.py  population.py  theme.py
tests/: test_business_ppt.py  test_config_env.py  test_design_tokens.py  test_desktop_port_reclaim.py  test_drivers.py  test_helix_ingest_filtering.py  test_helix_operational_metrics.py  test_historic_changes_single_source.py  test_hotspot_metrics.py  test_incident_attribution.py  test_incident_rationale.py  test_ingest_contracts.py  test_ingest_features.py  test_knowledge_cache.py  test_llm_insight_response.py  test_nps_helix_linking.py  test_nps_math.py  test_nps_parser.py  test_period_kpis.py  test_platform_artifacts.py  test_platform_batch.py  test_plotly_theme.py  test_ppt_script.py  test_ppt_wrapped_table_layout.py  test_store_parquet_resilience.py  test_streamlit_chain_selection.py  test_streamlit_env_bootstrap.py  test_text_mining.py  test_ui_business_periods.py  test_ui_population.py  test_upload_service.py
tests/api/: test_api.py  test_dashboard_api.py
tests/fixtures/excel/: NPS Térmico Senda - 01Enero-02Febrero.xlsx  NPS Térmico Senda - 03Marzo.xlsx
tmp-ppt-test/: nps-incidencias-mx-bu-movil-empresas-20260306-1114.pptx
tmp_audit_store/: nps__BBVA México__Senda.meta.json
