[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nps-lens"
version = "0.1.0"
description = "NPS Lens — análisis avanzado de NPS térmico + VoC multi-fuente (MVP Senda MX)."
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = {text = "Proprietary"}
authors = [{name = "NPS Lens"}]
dependencies = [
  "pandas>=2.0,<2.3",
  "numpy>=1.24,<2.0",
  "pyarrow>=14.0,<16.0",
  "pydantic>=2.0,<3.0",
  "python-dotenv>=1.0,<2.0",
  "typer>=0.12,<0.13",
  "rich>=13.0,<14.0",
  "plotly>=5.18,<6.0",
  "scikit-learn>=1.3,<1.6",
  "statsmodels>=0.14,<0.15",
  "networkx>=3.1,<3.4",
  "ruptures>=1.1.8,<2.0",
  "streamlit>=1.31,<1.40",
  "openpyxl>=3.1,<3.2",
  "typing_extensions>=4.7,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "mypy>=1.8,<1.12",
  "types-python-dateutil",
  # Pin compatible with Python 3.9 (newer pandas-stubs builds require >=3.10)
  "pandas-stubs==2.2.2.240807",
  "ruff>=0.3,<0.7",
  "black>=24.2,<25.0",
  "pre-commit>=3.6,<4.0",
]

[project.scripts]
nps-lens = "nps_lens.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
fix = true

[tool.ruff.lint]
## Lint policy (MVP): focus on correctness + imports + basic bugbear.
## We intentionally exclude heavier "style/polish" families (PL/RUF/UP) to keep CI actionable.
select = ["E","F","I","B","SIM"]
ignore = [
  "PLR0913",  # many function args ok for analytics helpers
  "PLR2004",  # allow magic numbers in scoring heuristics
  "UP007",    # Python 3.9: keep Optional[...] (no X | Y)
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "ruptures.*",
  "networkx.*",
  "statsmodels.*",
  "sklearn.*",
  "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=src/nps_lens --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
  "src/nps_lens/ui/*",
  "src/nps_lens/design/*",
  "src/nps_lens/quality/*",
  "src/nps_lens/core/*",
  "src/nps_lens/models/*",
  "src/nps_lens/logging.py",
  "src/nps_lens/cli.py",
  "src/nps_lens/analytics/changepoints.py",
  "src/nps_lens/analytics/causal.py",
  "src/nps_lens/analytics/journey.py",
  "src/nps_lens/analytics/opportunities.py",
  "src/nps_lens/analytics/nps_helix_link.py",
  "src/nps_lens/llm/client.py",
  "src/nps_lens/llm/pack.py",
  "src/nps_lens/llm/schemas.py",
  "src/nps_lens/ingest/incidents.py",
  "src/nps_lens/ingest/nps_thermal.py",
  "src/nps_lens/ingest/reviews.py",
]

[tool.coverage.report]
skip_empty = true
