[build-system]
requires = [ "setuptools>=68", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "nps-lens"
version = "0.1.0"
description = "NPS Lens — análisis avanzado de NPS térmico + VoC multi-fuente (MVP Senda MX)."
readme = "README.md"
requires-python = ">=3.9,<3.10"

dependencies = [
  "pandas>=2.0,<2.3",
  "numpy>=1.24,<2.0",
  "pyarrow>=14.0,<16.0",
  "pydantic>=2.0,<3.0",
  "python-dotenv>=1.0,<2.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "python-multipart>=0.0.9,<0.1",
  "typer>=0.12,<0.13",
  "rich>=13.0,<14.0",
  "plotly>=5.18,<6.0",
  "python-pptx>=1.0.2,<2.0",
  "kaleido>=0.2.1,<0.3.0",
  "scikit-learn>=1.3,<1.6",
  "statsmodels>=0.14,<0.15",
  "networkx>=3.1,<3.4",
  "ruptures>=1.1.8,<2.0",
  "openpyxl>=3.1,<3.2",
  "typing_extensions>=4.7,<5.0",
]
[[project.authors]]
name = "NPS Lens"

[project.license]
text = "Proprietary"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "httpx>=0.28,<0.29",
  "mypy>=1.8,<1.12",
  "types-python-dateutil",
  "pandas-stubs==2.2.2.240807",
  "ruff>=0.3,<0.7",
  "black>=24.2,<25.0",
  "pre-commit>=3.6,<4.0",
]

build = []

[project.scripts]
nps-lens = "nps_lens.cli:app"

[tool.black]
line-length = 100
target-version = [ "py39",]

[tool.ruff]
line-length = 240
target-version = "py39"
fix = true

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
files = ["src/nps_lens"]
exclude = "(^app/|^tests/|^data/|^reports/)"

# Pragmatic typing policy:
# - Keep strict typing for lightweight core modules.
# - Pandas-heavy modules (analytics/ui/store/ingest) are excluded from strict checks
#   to avoid noisy false positives with pandas typing.

[[tool.mypy.overrides]]
module = [
  "nps_lens.ui.*",
  "nps_lens.analytics.*",
  "nps_lens.ingest.*",
  "nps_lens.reports.executive_ppt",
  "nps_lens.core.store",
  "nps_lens.platform.*",
  "nps_lens.application.service",
]
ignore_errors = true
[[tool.mypy.overrides]]
module = [ "ruptures.*", "networkx.*", "statsmodels.*", "sklearn.*", "plotly.*",]
ignore_missing_imports = true

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff.lint]
select = [ "E", "F", "I", "B", "SIM",]
ignore = [ "PLR0913", "PLR2004", "UP007",]

[tool.ruff.lint.per-file-ignores]
"src/nps_lens/api/app.py" = ["B008"]
"src/nps_lens/cli.py" = ["B008"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/nps_lens --cov-report=term-missing --cov-fail-under=80"
testpaths = [ "tests",]

[tool.coverage.run]
branch = true
omit = [
  "app/*",
  "tests/*",
  "src/nps_lens/ui/*",
  "src/nps_lens/design/*",
  "src/nps_lens/quality/*",
  "src/nps_lens/core/*",
  "src/nps_lens/models/*",
  "src/nps_lens/application/*",
  "src/nps_lens/logging.py",
  "src/nps_lens/cli.py",
  "src/nps_lens/desktop.py",
  "src/nps_lens/platform/batch.py",
  "src/nps_lens/analytics/changepoints.py",
  "src/nps_lens/analytics/causal.py",
  "src/nps_lens/analytics/journey.py",
  "src/nps_lens/analytics/opportunities.py",
  "src/nps_lens/analytics/nps_helix_link.py",
  "src/nps_lens/llm/client.py",
  "src/nps_lens/llm/pack.py",
  "src/nps_lens/llm/schemas.py",
  "src/nps_lens/ingest/incidents.py",
  "src/nps_lens/ingest/nps_thermal.py",
  "src/nps_lens/ingest/reviews.py",
]

[tool.coverage.report]
skip_empty = true

[tool.setuptools.packages.find]
where = [ "src",]

[tool.ruff.lint.pycodestyle]
max-line-length = 240
